--- a/index.html
+++ b/index.html
@@ -3,145 +3,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eternal Fall</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Eternal Fall - OneManMedia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <!-- Splash Screen -->
     <div id="splashScreen">
-        <img src="assets/onemanmedia_logo.png" alt="OneManMedia Logo" id="studioLogo">
-        <h1>OneManMedia Presents</h1>
+        <img src="assets/logo/OneManMedia_Logo.png" alt="OneManMedia Logo">
     </div>
 
     <!-- Main Menu -->
     <div id="mainMenu" style="display: none;">
-        <img src="assets/main_menu_bg.jpg" id="mainMenuBackground">
-        <div id="menuButtons">
+        <img src="assets/backgrounds/main_menu_bg.png" id="menuBackground">
+        <div class="menu-buttons">
             <button id="newGameBtn">New Game</button>
             <button id="loadGameBtn">Load Game</button>
-            <button id="optionsBtn">Options</button>
-            <button id="mapEditorBtn">Map Editor</button>
+            <button id="settingsBtn">Settings</button>
             <button id="exitGameBtn">Exit Game</button>
         </div>
     </div>
 
     <!-- Character Creation Screen -->
-    <div id="characterCreation" style="display: none;">
-        <h2>Create Your Character</h2>
-
-        <!-- Gender Selection (Radio Buttons) -->
-        <div id="gender-selection">
-            <label>
-                <input type="radio" name="gender" value="Male" checked>
-                Male
-            </label>
-            <label>
-                <input type="radio" name="gender" value="Female">
-                Female
-            </label>
+    <div id="characterCreation" style="display:none;">
+        <h2>Character Creation</h2>
+        <div>
+            <label>Character Name:</label>
+            <input type="text" id="characterName" placeholder="Enter your name">
         </div>
 
-        <div id="sprite-preview">
-            <img id="sprite" src="default_sprite.png" alt="Character Sprite">
-            <div id="arrows">
-                <div id="hair-arrows" class="arrows">
-                    <span id="hair-left" class="arrow">←</span>
-                    <span id="hair-right" class="arrow">→</span>
-                </div>
-                <div id="shirt-arrows" class="arrows">
-                    <span id="shirt-left" class="arrow">←</span>
-                    <span id="shirt-right" class="arrow">→</span>
-                </div>
-                <div id="trousers-arrows" class="arrows">
-                    <span id="trousers-left" class="arrow">←</span>
-                    <span id="trousers-right" class="arrow">→</span>
-                </div>
-            </div>
+        <div>
+            <label>Gender:</label>
+            <label><input type="radio" name="gender" value="male" checked> Male</label>
+            <label><input type="radio" name="gender" value="female"> Female</label>
         </div>
 
-        <!-- Character Name Input -->
-        <div id="character-name">
-            <label for="name">Character Name:</label>
-            <input type="text" id="name" placeholder="Enter character name">
+        <div class="customization-section">
+            <h3>Hair</h3>
+            <button id="hair-left">&lt;</button>
+            <img id="hairPreview" src="" alt="Hair Style" width="50">
+            <button id="hair-right">&gt;</button>
         </div>
 
-        <div id="controls">
-            <p>Use Left/Right arrows to change feature. Use Up/Down arrows to select options.</p>
-            <p id="current-feature">Current Feature: Gender</p>
+        <div class="customization-section">
+            <h3>Shirt</h3>
+            <button id="shirt-left">&lt;</button>
+            <img id="shirtPreview" src="" alt="Shirt Style" width="50">
+            <button id="shirt-right">&gt;</button>
         </div>
 
-        <div id="feature-info">
-            <p id="gender-info">Gender: Male</p>
-            <p id="hair-info">Hair Style: Short, Hair Color: #000000</p>
-            <p id="shirt-info">Shirt Style: T-shirt, Shirt Color: #ffffff</p>
-            <p id="trousers-info">Trousers Style: Jeans, Trousers Color: #000000</p>
-            <p id="name-info">Name: Enter Name</p>
+        <div class="customization-section">
+            <h3>Trousers</h3>
+            <button id="trousers-left">&lt;</button>
+            <img id="trousersPreview" src="" alt="Trousers Style" width="50">
+            <button id="trousers-right">&gt;</button>
         </div>
 
-        <button id="create-character">Create Character</button>
+        <div>
+            <h3>Character Preview</h3>
+            <img id="sprite" src="" alt="Character Preview" width="100">
+        </div>
+
+        <button id="startGameBtn">Start Game</button>
     </div>
 
-    <!-- Load Game Screen -->
-    <div id="loadGameScreen" style="display: none;">
-        <h2>Load Game</h2>
-        <div id="saveSlots">
-            <button class="slot" data-slot="1">Save Slot 1</button>
-            <button class="slot" data-slot="2">Save Slot 2</button>
-            <button class="slot" data-slot="3">Save Slot 3</button>
-        </div>
-        <button id="backFromLoad">Back</button>
-    </div>
-
-    <!-- Options Screen -->
-    <div id="optionsScreen" style="display: none;">
-        <h2>Options</h2>
-        <label>Game Volume: <input type="range" id="gameVolume" min="0" max="100" value="50"></label>
-        <label>Music Volume: <input type="range" id="musicVolume" min="0" max="100" value="50"></label>
-        <button id="backFromOptions">Back</button>
+    <!-- Settings Screen -->
+    <div id="settingsScreen" style="display:none;">
+        <h2>Settings</h2>
+        <label>Screen Resolution:</label>
+        <select id="screenResolution">
+            <option value="1280x720">1280x720</option>
+            <option value="1920x1080">1920x1080</option>
+        </select>
+        <label>Game Volume:</label>
+        <input type="range" id="gameVolume" min="0" max="100" value="50">
+        <label>Music Volume:</label>
+        <input type="range" id="musicVolume" min="0" max="100" value="50">
+        <label><input type="checkbox" id="fullscreenToggle"> Fullscreen Mode</label>
+        <button id="backToMenuBtn">Back to Menu</button>
     </div>
 
     <!-- Canvas for Game -->
-    <canvas id="gameCanvas" width="800" height="600" style="display: none;"></canvas>
+    <canvas id="gameCanvas" width="1280" height="720" style="display:none;"></canvas>
 
-    <!-- Virtual Joystick -->
-    <div id="joystick" class="joystick" style="display: none;">
-        <div id="joystickHandle" class="handle"></div>
+    <!-- Secret Admin Panel -->
+    <div id="adminPanel" style="display:none;">
+        <h2>Admin Panel</h2>
+        <button id="mapEditorBtn">Map Editor</button>
+        <button id="itemEditorBtn">Item Editor</button>
+        <button id="npcEditorBtn">NPC Editor</button>
+        <button id="eventEditorBtn">Event Editor</button>
+        <button id="questEditorBtn">Quest Editor</button>
+        <button id="teleportBtn">Teleport to Map</button>
+        <button id="closeAdminPanelBtn">Close Panel</button>
     </div>
 
-    <!-- Map Editor -->
-    <div id="mapEditorPanel" style="display: none;">
-        <div id="tilePalette"></div>
-        <div id="mapProperties">
-            <h3>Map Properties</h3>
-            <label>Zone:
-                <select id="zoneType">
-                    <option value="safe">Safe</option>
-                    <option value="dungeon">Dungeon</option>
-                    <option value="shop">Shop</option>
-                    <option value="playerHouse">Player House</option>
-                    <option value="bank">Bank</option>
-                </select>
-            </label>
-            <label>Weather:
-                <select id="weatherType">
-                    <option value="clear">Clear</option>
-                    <option value="rain">Rain</option>
-                    <option value="snow">Snow</option>
-                </select>
-            </label>
-            <label>Map Music:
-                <input type="text" id="mapMusic" placeholder="Enter music file path">
-            </label>
-            <label>Map Size:
-                <input type="number" id="mapWidth" placeholder="Width" min="10">
-                <input type="number" id="mapHeight" placeholder="Height" min="10">
-            </label>
-            <button id="saveMapBtn">Save Map</button>
-            <button id="exitMapEditor">Exit Editor</button>
-        </div>
-    </div>
-
-    <script src="js/game.js"></script>
-    <script src="js/characterCreation.js"></script> <!-- Make sure this is added to handle character creation -->
+    <script src="game.js"></script>
 </body>
 </html>
