--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     <canvas id="gameCanvas" width="1280" height="720" style="display:none;"></canvas>
 
     <!-- Secret Admin Panel -->
+    
+    <!-- Secret touch button (top-right corner) -->
+    <div id="secretTouchArea"></div>
     <div id="adminPanel" style="display:none;">
         <h2>Admin Panel</h2>
         <button id="mapEditorBtn">Map Editor</button>
